# niko-clip

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  download.py  pyproject.toml  requirements.txt  routers.py  template.yaml
backend/: .env.example  .gitignore  Dockerfile  camera.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  routers.py  schemas.py  template.yaml
backend/models/: __init__.py  emotions_recognizer.py  face_detector.py  model.py
backend/services/: __init__.py  task_repository.py
frontend/: next.config.ts  package-lock.json
frontend/public/: robots.txt
frontend/src/app/: layout.tsx  page.tsx  sitemap.ts
services/: image_service.py
