[project]
name = "smile-kiritorikun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.8.1.78",
    "python-dotenv>=1.1.1",
    "openvino==2024.6.0",
    "openvino-dev==2024.6.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "pytest>=7.0.0",
    "httpx>=0.28.1",
]
